test/functional/test_site_algolia_plugin/expected/markbind/css/markbind.css
blockquote {
    border-left: 0.25em solid #dfe2e5;
    color: #6a737d;
    padding: 0 1rem;
}

code {
    background: #f8f8f8;
    border-radius: 3px;
    padding: 0.2em 0.4em;
    word-break: normal;
}

pre.hljs > code {
    background: none;
}

pre > code.hljs {
    -webkit-background-clip: padding-box; /* for Safari */
    background: ghostwhite;
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
    border: 1px solid rgb(200, 200, 200);
    border: 1px solid rgba(200, 200, 200, 0.3);
    border-radius: 5px;
}

kbd {
    background-color: #fafbfc;
    border: 1px solid #c6cbd1;
    border-bottom-color: #959da5;
    box-shadow: inset 0 -1px 0 #959da5;
    color: #444d56;
}

.btn:active,
.btn:focus {
    box-shadow: none !important;
    outline: none !important;
}

.fa.fa-anchor {
    color: #ccc;
    display: inline;
    font-size: 14px;
    margin-left: 10px;
    padding: 3px;
    text-decoration: none;
    visibility: hidden;
}

.fa.fa-anchor:hover {
    color: #555;
}

code.hljs.inline {
    background: #f8f8f8;
    color: #333;
    display: initial;
    padding: 0px;
}

.markbind-table {
    width: auto;
}

.radio-list-item,
.task-list-item {
    list-style-type: none;
    margin: 0 0 0 -1.2em;
}

.radio-list-item label {
    font-weight: inherit;
}

.table-striped > thead,
.table-striped > tbody > tr:nth-of-type(even) {
    background-color: #fff;
}

/**
  * Holy Grail Layout
  *
  * This section covers the common styles used within Header, Footer and Side Navigation bars
  */

/* #app is treated as the main container */
#app {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

#flex-body {
    display: flex;
    flex: 1;
}

#content-wrapper {
    flex: 1;
    margin: 0 auto;
    max-width: 1000px;
    padding: 0 20px;
    transition: 0.4s;
    width: 100%;
    -webkit-transition: 0.4s;
}

/* Footer */
footer {
    background-color: #f5f5f5;
    color: dimgrey;
    padding: 10px 0;
}

/* Side Navigation menus */

.spacer-top {
    /* This class is to ensure adequate spacing of contents from the top of the page */
    padding-top: 1rem;
}

.scrollable {
    overflow-y: auto;
}

.viewport-height-90 {
    max-height: 90vh;
}

/* Bootstrap small(sm) responsive breakpoint */
@media (max-width: 767.98px) {
    .dropdown-menu > li > a {
        white-space: normal;
    }

    .navbar-default .navbar-nav .open .dropdown-menu > li > a,
    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
        color: #333;
    }

    .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
    .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a {
        background-color: #337ab7;
    }

    .navbar-nav .open .dropdown-menu {
        background-color: #fff;
    }

    #content-wrapper {
        padding: 0 10px;
    }
}

/* Scrollbar */

.slim-scroll::-webkit-scrollbar {
    width: 5px;
}

.slim-scroll::-webkit-scrollbar-thumb {
    background: #808080;
    border-radius: 20px;
}

.slim-scroll::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 20px;
}

.slim-scroll-blue::-webkit-scrollbar {
    width: 5px;
}

.slim-scroll-blue::-webkit-scrollbar-thumb {
    background: #00b0ef;
    border-radius: 20px;
}

.slim-scroll-blue::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 20px;
}

/* Temporary Anti-FOUC Styles */
/* By default, some VueStrap components break the layout of the page before Vue is mounted, */
/* so we apply temporary styles to fix the layout until Vue correctly updates the DOM. */

.temp-navbar {
    display: flex;
}

.temp-navbar li {
    display: block;
}

.temp-dropdown {
    display: none;
}

